src/blocks/slider.sass
.slider
    width: 100%
    height: 64.1rem

.slider__wrapper
    width: 100%
    height: 100%

.slider__item
    width: 100%
    height: 100%
    position: relative

.slider__img
    position: absolute
    width: 100%
    height: 100%
    z-index: 1

.slider__content
    width: 62rem
    position: absolute
    z-index: 2
    padding-top: 8.1rem


.slider__content-header
    margin-bottom: 2.1rem
    
    +font(900, 5.4rem, 120%)
    letter-spacing: -0.03em

    &-img
        display: inline-block
        width: 5.9rem
        height: 5.1rem
        position: relative
        bottom: -1rem
        left: -.1rem


.slider__content-descripion
    margin-bottom: 3.2rem

    +font(400, 2.1rem, 160%)

.slider__button
    padding: 2.5rem 4.85rem 2.9rem 4.85rem
    margin-bottom: 9.4rem

    +font(600, 1.8rem, 140%)

    &_color
        color: #FFFFFF
        background-color: #0074D4
        box-shadow: 0 4.3rem 5.1rem rgba(0, 116, 212, 0.2), 0 1.29632rem 1.5375rem rgba(0, 116, 212, 0.241), 0 .538427rem .638599rem rgba(0, 116, 212, 0.15), 0 .194738rem .230969rem rgba(0, 116, 212, 0.059)
        border: 1px solid #0074D4

@media (min-width: 48em)
    .slider__button_color:hover
        background: none
        color: #0074D4

.swiper-pagination-bullet
    width: 0.6rem
    height: 0.6rem

.swiper-pagination-bullet-active
    background-color: #2B3350

.slider__arrow
    width: 5rem
    height: 5rem
    display: flex

.slider__arrow_color
    border-radius: 50%
    background: #FFFFFF
    box-shadow: 0 1.2rem 2.0rem -0.8rem rgba(68, 88, 104, 0.25)

.slider__arrow-img
    width: 0.8rem
    height: 1.4rem
    margin: auto
    align-items: center

.slider__arrow-left
    position: absolute
    left: 4%
    top: 50%
    transform: translate(-50%, -50%)
    z-index: 3

.slider__arrow-right
    position: absolute
    left: 96.4%
    top: 50%
    transform: translate(-50%, -50%)
    z-index: 3

@media (max-width: 48em)
    .slider
        height: 20rem
        margin-bottom: 0rem



    .slider__item
        height: 100%
        position: relative

    .slider__img
        height: 17.2rem
        

        img
            object-fit: cover
            object-position: -8.3rem
        

    .slider__content
        width: 20.1rem
        padding-top: 2.3rem

    .slider__content-header
        margin-bottom: 1.2rem
        margin-top: 0
        
        +font(500, 1.7rem, 120%)
        letter-spacing: 0.01em

        &-img
            width: 1.8rem
            height: 1.6rem
            bottom: -0.1rem
            left: -.3rem

    .slider__content-descripion
        display: none

    .slider__button
        padding: 1.1rem 1.75rem 1.3rem 1.75rem
        margin-bottom: auto

        +font(600, 1.3rem, 140%)

        &_color
            box-shadow: 0 1.29632rem 1.5375rem rgba(0, 116, 212, 0.241), 0 .538427rem .638599rem rgba(0, 116, 212, 0.15), 0 .194738rem .230969rem rgba(0, 116, 212, 0.059)

    .swiper-pagination-bullet
        width: 0.4rem
        height: 0.4rem

    .swiper-pagination-bullet-active
        background-color: #2B3350

    .slider__arrow
        display: none

    

